Modified docker compose

--- a/LAB04 - Securing the application/Docker/docker-compose.yml
+++ b/LAB04 - Securing the application/Docker/docker-compose.yml
@@ -3,7 +3,11 @@ version: '3'
 services:
   postgres:
     image: runcor3/webapp2_postgres:latest
+    volumes:
+      - postgres_volume:/var/lib/postgresql/data
     container_name: postgres
+    environment:
+    - PGDATA=/mypostgresdata
     ports:
       - "5432:5432"
 
@@ -26,3 +30,8 @@ services:
     ports:
       - "8080:8080"
     command: start-dev
+
+
+volumes:
+  postgres_volume: {}
+  keycloak_volume: {}
