fix: test with keycloak

--- a/LAB04 - Securing the application/server/src/main/resources/application.properties
+++ b/LAB04 - Securing the application/server/src/main/resources/application.properties
@@ -19,11 +19,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web: DEBUG
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri= ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${keycloak.url}:${keycloak.port}/realms/TicketingServiceRealm
-
 jwt.auth.converter.resource-id=ticketing-service-client
 jwt.auth.converter.principal-attribute=preferred_username
 
+keycloakBaseUrl=http://localhost:8080
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloakBaseUrl}/realms/TicketingServiceRealm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloakBaseUrl}/realms/TicketingServiceRealm/protocol/openid-connect/certs
 
 
