--- a/LAB03 - Ticket management/Postgres/docker-compose.yml
+++ b/LAB03 - Ticket management/Postgres/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    image: runcor3/webapp2_postgres:latest
+    image: runcor3/webapp2_postgres:lab3
     container_name: postgres
     ports:
       - "5432:5432"
@@ -11,7 +11,7 @@ services:
     depends_on:
     - postgres
 
-    image: runcor3/ticketing-service:latest
+    image: runcor3/ticketing-service:lab3
     container_name: ticketing-service
     ports:
       - "8080:8080"
