feat(api): implemented expert creation

--- a/LAB05 - Signup and Observability/server/src/main/resources/application.properties
+++ b/LAB05 - Signup and Observability/server/src/main/resources/application.properties
@@ -3,16 +3,16 @@ spring.datasource.username=admin
 spring.datasource.password=password
 
 server.port=8081
-keycloak.url=keycloak
-#keycloak.url=localhost
+#keycloak.url=keycloak
+keycloak.url=localhost
 keycloak.port=8080
 keycloak.realm=TicketingServiceRealm
 keycloak.client=ticketing-service-client
 keycloak.username=admin
 keycloak.password=password
 
-postgres.url=postgres
-#postgres.url=localhost
+#postgres.url=postgres
+postgres.url=localhost
 postgres.port=5432
 
 spring.jpa.show-sql=true
