--- a/LAB05 - Signup and Observability/Docker/grafana/provisioning/datasources/datasource.yml
+++ b/LAB05 - Signup and Observability/Docker/grafana/provisioning/datasources/datasource.yml
@@ -6,6 +6,7 @@ datasources:
       access: proxy
       url: http://host.docker.internal:9090
       editable: false
+      uid: prometheus
       jsonData:
         httpMethod: POST
         exemplarTraceIdDestinations:
