--- a/LAB05 - Signup and Observability/Docker/prometheus/prometheus.yml
+++ b/LAB05 - Signup and Observability/Docker/prometheus/prometheus.yml
@@ -3,10 +3,10 @@ global:
     evaluation_interval: 2s
 
 scrape_configs:
-    - job_name: 'prometheus'
-      static_configs:
-          - targets: ['host.docker.internal:9090']
-    - job_name: 'apps'
-      metrics_path: '/actuator/prometheus'
-      static_configs:
-        - targets: ['host.docker.internal:7654','host.docker.internal:6543']
+  - job_name: 'prometheus'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'host.docker.internal:8081' ]
+        labels:
+          namespace: 'event-sourcing'
+          app: 'ticketing-service'
