--- a/LAB05 - Signup and Observability/server/src/main/resources/application.properties
+++ b/LAB05 - Signup and Observability/server/src/main/resources/application.properties
@@ -17,7 +17,7 @@ postgres.port=5432
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework.web: DEBUG
+#logging.level.org.springframework.web= DEBUG
 
 jwt.auth.converter.resource-id=ticketing-service-client
 jwt.auth.converter.principal-attribute=preferred_username
@@ -27,3 +27,15 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloakBaseUrl}/realms/T
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloakBaseUrl}/realms/TicketingServiceRealm/protocol/openid-connect/certs
 
 
+## Observability and Tracing
+
+# sampling all in dev, reduce it in prod to save loading
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
