--- a/LAB05 - Signup and Observability/server/src/main/resources/application.properties
+++ b/LAB05 - Signup and Observability/server/src/main/resources/application.properties
@@ -3,16 +3,16 @@ spring.datasource.username=admin
 spring.datasource.password=password
 
 server.port=8081
-#keycloak.url=keycloak
-keycloak.url=localhost
+keycloak.url=keycloak
+#keycloak.url=localhost
 keycloak.port=8080
 keycloak.realm=TicketingServiceRealm
 keycloak.client=ticketing-service-client
 keycloak.username=admin
 keycloak.password=password
 
-#postgres.url=postgres
-postgres.url=localhost
+postgres.url=postgres
+#postgres.url=localhost
 postgres.port=5432
 
 spring.jpa.show-sql=true
@@ -28,7 +28,7 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.auth.converter.resource-id=ticketing-service-client
 jwt.auth.converter.principal-attribute=preferred_username
 
-keycloakBaseUrl=http://localhost:8080
+keycloakBaseUrl=http://keycloak:8080
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloakBaseUrl}/realms/TicketingServiceRealm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloakBaseUrl}/realms/TicketingServiceRealm/protocol/openid-connect/certs
 
@@ -38,6 +38,7 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloakBaseUrl}/realms/
 # sampling all in dev, reduce it in prod to save loading
 management.tracing.sampling.probability=1.0
 management.endpoints.web.exposure.include=prometheus
+management.zipkin.tracing.endpoint=http://tempo:9411/api/v2/spans
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 
