fix: modified grafana dashboard

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -10,8 +10,7 @@ name: Gradle Package
 on:
   push:
     branches:
-      - main
-      - lab5
+      - nopush
     paths:
       - 'LAB04 - Securing the application/**'
       - '.github/**'
