feat: implemented message and attachment controllers and services

--- a/Final_Project/server/src/main/resources/application.properties
+++ b/Final_Project/server/src/main/resources/application.properties
@@ -39,3 +39,7 @@ management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
 
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+
+# Attachment directory
+attachment.directory = /attachments
