--- a/Final_Project/client/package.json
+++ b/Final_Project/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "proxy": "http://localhost:8081",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -44,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
