--- a/Final_Project/client/package.json
+++ b/Final_Project/client/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.8",
     "fortawesome": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
