--- a/Final_Project/server/src/main/resources/application.properties
+++ b/Final_Project/server/src/main/resources/application.properties
@@ -38,7 +38,10 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloakBaseUrl}/realms/
 # sampling all in dev, reduce it in prod to save loading
 management.tracing.sampling.probability=1.0
 management.endpoints.web.exposure.include=prometheus
-management.zipkin.tracing.endpoint=http://tempo:9411/api/v2/spans
+
+#management.zipkin.tracing.endpoint=http://tempo:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 
@@ -49,4 +52,4 @@ logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-
 
 
 # Attachment directory
-attachment.directory = /attachments
+attachment.directory = attachments
