--- a/Final_Project/Docker/docker-compose.yml
+++ b/Final_Project/Docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    image: runcor3/webapp2_postgres:lab5
+    image: runcor3/webapp2_postgres:final-project
     container_name: postgres
     environment:
     - PGDATA=/mypostgresdata
@@ -19,14 +19,14 @@ services:
      postgres:
        condition: service_healthy
 
-    image: runcor3/ticketing-service:lab5
+    image: runcor3/ticketing-service:final-project
     container_name: ticketing-service
     ports:
       - "8081:8081"
 
   keycloak:
     #image: quay.io/keycloak/keycloak:21.1.1
-    image: runcor3/webapp2_keycloak:lab5
+    image: runcor3/webapp2_keycloak:final-project
     container_name: keycloak
     environment:
     - KEYCLOAK_ADMIN=admin
