--- a/Final_Project/client/package.json
+++ b/Final_Project/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:8081",
+  "proxy": "http://localhost:8081/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
