fix: modified grafana port in docker compose

--- a/Final_Project/Docker/docker-compose.yml
+++ b/Final_Project/Docker/docker-compose.yml
@@ -80,6 +80,7 @@ services:
         - GF_AUTH_ANONYMOUS_ENABLED=true
         - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
         - GF_AUTH_DISABLE_LOGIN_FORM=true
+        - GF_SERVER_HTTP_PORT=3333
     ports:
-        - "3000:3000"
+        - "3333:3333"
 
