--- a/Final_Project/server/src/main/resources/application-local.properties
+++ b/Final_Project/server/src/main/resources/application-local.properties
@@ -16,7 +16,8 @@ postgres.url=localhost
 postgres.port=5432
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.hikari.maximum-pool-size=10
 
 
 jwt.auth.converter.resource-id=ticketing-service-client
