--- a/Final_Project/server/src/main/resources/application-production.properties
+++ b/Final_Project/server/src/main/resources/application-production.properties
@@ -15,6 +15,7 @@ postgres.port=5432
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximum-pool-size=10
 
 
 jwt.auth.converter.resource-id=ticketing-service-client
